HP-2006-11-15-0: Bugfix:    Renamed file backslash_space_queue19. to
                            backslash_space_queue19

RD-2006-11-10-0: Enhancem.: Enhanced tests for limitation rule sets
                            - added new test
                              system_tests/scheduler/resource_quota
                            - added Xattr test in clients/qconf
                            - added lirs runlevel in qmaster/complex

JG-2006-11-10-0: Bugfix:    fixed system_tests/scheduler/reconnect for maintrunk
                            clusters (get_qconf_list now returns empty list in 
                            case of qconf error).
                 Review:    RD

JG-2006-11-09-0: Enhancem.: Allow testing of NetBSD systems.
                            Cleanup.
                 Review:    RD

JG-2006-11-08-0: Enhancem.: new check system_tests/scheduler/reconnect.
                 Review:    AH

JG-2006-11-06-0: Bugfix:    issue_1330 check removed spooling database during
                            execd installation, when local bdb spooling was 
                            configured. This caused subsequent tests to fail.
                 Review:    RD

JG-2006-11-03-0: Bugfix:    Fixed negative tests (from non cluster host) with
                            CSP systems.
                 Review:    AA

RD-2006-11-02-0: Enhancem.  - added qlimit test
                            - enhanced pe_ranges, resource_reservation for 
                              limitation rule sets
                            - throughput test reports now correct qmaster host
                 Review:    JG

JG-2006-11-01-0: Enhancem.: Made all calls to open_remote_spawn_process and
                            start_remote_prog make use of the cd_dir option
                            added with JG-2006-10-23-0.
                            For Solaris zones, use master zones send_speed, see
                            JG-2006-10-19-0.