@@ -629,7 +629,7 @@ proc qrsh_accounting {} {
                         if {[info exists job_info]} {
                            unset job_info
                         }
-                        if {[get_extended_job_info $job_id] } {
+                        if {[get_extended_job_info $job_id] == 1} {
                            if { $job_info(cpu) < 10 } {
                               add_proc_error "qrsh_accounting"  -3 "online usage probably does not work on $host"
                            }
