@@ -148,7 +148,7 @@ proc resource_quota_dynamic_limit {} {
    set result [add_lirs lirs_charray]
 
    # fill up the queue with the maximal amount of jobs
-   for {set act_job 0}{$act_job < $max_slots} {incr act_job 1} {
+   for {set act_job 0} {$act_job < $max_slots} {incr act_job 1} {
       set job_id [submit_job "$job_options"]
       trigger_scheduling
       wait_for_jobstart $job_id "leeper" 20
