@@ -70,7 +70,6 @@ lappend check_functions "ticket_for_departments"
 lappend check_functions "ticket_for_projects"
 lappend check_functions "ticket_for_users"
 
-
 proc ticket_calculation_init_level {} {
    global ts_config
    global CHECK_ACT_LEVEL
@@ -562,7 +561,7 @@ proc ticket_submit_job_and_check_share { jobs job_count job_start_order } {
    upvar $jobs job
    
    # First clear usage
-   catch {  eval exec "$ts_config(product_root)/bin/$CHECK_ARCH/qconf" "-clearusage" } result
+   set result [start_sge_bin "qconf" "-clearusage"]
    puts $CHECK_OUTPUT $result
    
    # Submit jobs
@@ -786,8 +785,7 @@ proc ticket_check_job_share { jobs job_count } {
 
      get_extended_job_info $job($i,id)
      set try_count 5
-     set is_ok 0
-     while { $try_count > 0 && $is_ok == 0 } {
+     while { $try_count > 0 } {
         if { $job_info(share) != $job($i,share) } {
            trigger_scheduling
            after 2000
@@ -800,13 +798,13 @@ proc ticket_check_job_share { jobs job_count } {
 
      if { $job_info(share) != $job($i,share) } {
        # Since noone can explain the calculation of
-       # the shares of running job we only consider pending
-       # jobs           
+       # the shares of running jobs we consider pending
+       # jobs only
        if { $job_info(state) == "qw" } {
           add_proc_error "ticket_check_job_share" -1 "Invalid share of job\($i\) $job($i,id): expected was $job($i,share), but it is $job_info(share)"
        } else {
           # for running jobs we write only a warning
-          add_proc_error "ticket_check_job_share" -3 "Invalid share of running job\($i\) $job($i,id): expected was $job($i,share), but it is $job_info(share)"
+          add_proc_error "ticket_check_job_share" -3 "Invalid share of running job\($i\) $job($i,id): expected was $job($i,share), but it is $job_info(share)" 0
        }
       } else {
          puts $CHECK_OUTPUT "job\($i\) $job($i,id) has correct share $job_info(share)"
